--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-
+* {
+  margin: 0;
+}
 html,
 body {
+  --black: hsl(240, 6%, 13%);
+  --gray: hsl(240, 9%, 89%);
   height: 100%;
+  font-size: "Roboto", sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 body {
   display: grid;
@@ -13,20 +19,29 @@ main {
   position: relative;
   width: 375px;
   height: 812px;
+  color: var(--gray);
 }
 
-h1 {
-  width: 203px;
-  height: 30px;
-  left: 87px;
-  top: 392px;
-
-  font-family: roboto, arial, helvetica;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 24px;
-  line-height: 30px;
+.container {
+  max-width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
+
+.avatar {
+  width: 10rem;
+  height: 11.5rem;
+  left: 108px;
+  top: 184px;
+  border-style: normal;
+}
+
+.avatar span {
+  position: absolute;
+  top: -15px;
+}
+
 a {
   color: #000000;
   text-decoration: none;
@@ -35,8 +50,6 @@ a {
 ul {
   display: flex;
   padding: 20px;
-  width: 375px;
-  height: 812px;
 }
 
 ul li {
