--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 * {
   margin: 0;
 }
@@ -10,6 +9,7 @@ body {
   font-size: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
 }
+
 body {
   display: grid;
   place-items: center;
@@ -31,15 +31,22 @@ main {
 
 .avatar {
   width: 10rem;
-  height: 11.5rem;
-  left: 108px;
-  top: 184px;
-  border-style: normal;
+  height: 11.5rem 0;
+  position: relative;
 }
 
 .avatar span {
   position: absolute;
   top: -15px;
+  z-index: 1;
+}
+
+.avatar > img {
+  clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+  object-fit: cover;
+  border-style: normal;
+  width: 10rem;
+  height: 11.5rem;
 }
 
 a {
