--- a/style.css
+++ b/style.css
@@ -16,9 +16,10 @@ body {
 }
 
 main {
-  background: url(imagens/Mobile.svg);
-  width: 375px;
-  height: 812px;
+  background: url(imagens/Mobile.svg) no-repeat center/cover;
+  width: 100vw;
+  height: 100vh;
+  min-height: 812px;
   color: var(--gray);
 }
 
